# radiomcp

./: .gitignore  API.md  ATTRIBUTION.md  CHANGELOG.md  COPYRIGHT_POLICY.md  DISCLAIMER.md  Dockerfile  LICENSE  README.ko.md  README.md  TAKEDOWN_POLICY.md  TODO.md  blocklist.json  blocklist_checker.py  languages.json  pyproject.toml  radio.py  server.json  smithery.yaml
.github/workflows/: process-takedown.yml  publish.yml
.well-known/mcp/: server-card.json
docs/: API_ARCHITECTURE.ko.md  API_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_IDEAS.md  DOCUMENTATION.md  DOCUMENTATION_KO.md  RADIO_API_RESEARCH.md  URL_DISCOVERY.md  g3-services.ko.md  g3-services.md
radio-mcp/: HELP.md  README.md  daily_maintenance.py  server.py
radiomcp/: HELP.md  README.md  __init__.py  blocklist.json  cron_maintenance.sh  daily_maintenance.py  pyproject.toml  server.py  sync_from_unified.py  tui.py
scripts/g3/: auto_broadcaster.py  broadcaster_registry.json  hls_validator.py  korean_resolvers.py  manage_blocklist.py  radio_api_v4.py
